--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<h1>Hello World</h1>
+<!DOCTYPE>
+<html>
+<head>
+	<title>Emily Griffin</title>
+</head>
+
+<body>
+<h1>Emily Griffin</h1>
+<p></p>
+<img src="https://production-startupschool.s3.amazonaws.com/sipeople-studentprofile/studentprofile-584Emily%20Griffin%20square%20headshot.jpg" />
+<p></p>
+<h3>About Me</h3>
+<p></p>
+For the past 4 years, I've worked full time as an Arts Administrator in the Greater Boston area with a focus on Management and Marketing. Now I am looking to channel my hard skills and innovation into a career at a startup. 
+<p></p>
+I've always been in the business of creating something from nothing. Whether that means:
+<p></p>
+-Composing original content for social media marketing
+-Designing a sales analysis report using advanced Excel features
+-Conceiving and organizing the first Autism Awareness Week at Brandeis University
+-Recruiting and managing a team of writers and editors creating web content for SEO
+-Teaching myself how to play piano and write songs
+-Developing an award-winning comedy sketch
+-Turning a crafting hobby into a side-business
+Etc., Etc.
+<p></p>
+While my personal interests and professional experience are eclectic, they all have one thing in common: creativity. 
+<p></p>
+I create products, experiences, processes -- and I know how to share these creations through clear communication and savvy strategy.
+<p></p>
+I am looking forward to gaining a whole slew of new skills at SIB, and most importantly, I'm excited to meet the movers and shakers of the Boston startup scene. I can't wait to see what you're creating.
+<p></p>
+<a href="www.linkedin.com/in/emilygriffinboston/">LindedIn Profile</a>
+
+</body>
+</html>
