--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@ For the past 4 years, I've worked full time as an Arts Administrator in the Grea
 <p></p>
 I've always been in the business of creating something from nothing. Whether that means:
 <p></p>
--Composing original content for social media marketing
--Designing a sales analysis report using advanced Excel features
--Conceiving and organizing the first Autism Awareness Week at Brandeis University
--Recruiting and managing a team of writers and editors creating web content for SEO
--Teaching myself how to play piano and write songs
--Developing an award-winning comedy sketch
--Turning a crafting hobby into a side-business
-Etc., Etc.
+<br>-Composing original content for social media marketing
+<br>-Designing a sales analysis report using advanced Excel features
+<br>-Conceiving and organizing the first Autism Awareness Week at Brandeis University
+<br>-Recruiting and managing a team of writers and editors creating web content for SEO
+<br>-Teaching myself how to play piano and write songs
+<br>-Developing an award-winning comedy sketch
+<br>-Turning a crafting hobby into a side-business
+<br>Etc., Etc.
 <p></p>
 While my personal interests and professional experience are eclectic, they all have one thing in common: creativity. 
 <p></p>
