--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@ For the past 4 years, I've worked full time as an Arts Administrator in the Grea
 <p></p>
 I've always been in the business of creating something from nothing. Whether that means:
 <p></p>
-<ul><li>-Composing original content for social media marketing</li>
-<li>-Designing a sales analysis report using advanced Excel features</li>
-<li>-Conceiving and organizing the first Autism Awareness Week at Brandeis University</li>
-<li>-Recruiting and managing a team of writers and editors creating web content for SEO</li>
-<li>-Teaching myself how to play piano and write songs</li>
-<li>-Developing an award-winning comedy sketch</li>
-<li>-Turning a crafting hobby into a side-business</li>
+<ul><li>Composing original content for social media marketing</li>
+<li>Designing a sales analysis report using advanced Excel features</li>
+<li>Conceiving and organizing the first Autism Awareness Week at Brandeis University</li>
+<li>Recruiting and managing a team of writers and editors creating web content for SEO</li>
+<li>Teaching myself how to play piano and write songs</li>
+<li>Developing an award-winning comedy sketch</li>
+<li>Turning a crafting hobby into a side-business</li>
 <li>Etc., Etc.</li></ul>
 <p></p>
 While my personal interests and professional experience are eclectic, they all have one thing in common: creativity. 
