Adding CSS style sheet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="emilygriffin.css">
 	<title>Emily Griffin</title>
 </head>
 
