--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
 <h1>Emily Griffin</h1>
+<p><h2>Artist Turned Entrepreneur</h2></pc>
 <p></p>
 <img src="https://production-startupschool.s3.amazonaws.com/sipeople-studentprofile/studentprofile-584Emily%20Griffin%20square%20headshot.jpg" />
 <p></p>
