--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 
 <body>
-<h1>Emily Griffin</h1>
+<div align="center"><h1>Emily Griffin</h1>
 <p><h2>Artist Turned Entrepreneur</h2></pc>
 <p></p>
-<img src="https://production-startupschool.s3.amazonaws.com/sipeople-studentprofile/studentprofile-584Emily%20Griffin%20square%20headshot.jpg" />
+<img src="https://production-startupschool.s3.amazonaws.com/sipeople-studentprofile/studentprofile-584Emily%20Griffin%20square%20headshot.jpg" /></div>
 <p></p>
 <h3>About Me</h3>
 <p></p>
