--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ I create products, experiences, processes -- and I know how to share these creat
 <p></p>
 I am looking forward to gaining a whole slew of new skills at SIB, and most importantly, I'm excited to meet the movers and shakers of the Boston startup scene. I can't wait to see what you're creating.
 <p></p>
-<a href="www.linkedin.com/in/emilygriffinboston/">LindedIn Profile</a>
+<div align="center"><a href="www.linkedin.com/in/emilygriffinboston/">LindedIn Profile</a></div>
 
 </body>
 </html>
