--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="emilygriffin.css">
 	<title>Emily Griffin</title>
+<!--Google Analytics Tracker-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-52752111-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </head>
 
 <body>
@@ -10,9 +22,9 @@
 <p><h2>Artist Turned Entrepreneur</h2></pc>
 <p></p>
 <img src="https://production-startupschool.s3.amazonaws.com/sipeople-studentprofile/studentprofile-584Emily%20Griffin%20square%20headshot.jpg" /></div>
-<p></p>
-<h3>About Me</h3>
-<p></p>
+	<p></p>
+	<h3>About Me</h3>
+	<p></p>
 For the past 4 years, I've worked full time as an Arts Administrator in the Greater Boston area with a focus on Management and Marketing. Now I am looking to channel my hard skills and innovation into a career at a startup. 
 <p></p>
 I've always been in the business of creating something from nothing. Whether that means:
