Google Webmaster Tracker added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@ function _kms(u){
 }
 _kms('//i.kissmetrics.com/i.js');
 _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
-</script>
+
+<!--Gooogle Webmaster-->
+<meta name="google-site-verification" content="VnfIcNgs7PsAGZH_t4kyN7gHzigCOVZOq9uIFEpPIfs" />
 
 <!--Google Analytics Tracker-->
 <script>
